UI improvements: responsive buttons, navbar color, and hover effects

--- a/uniform-inventory/history.html
+++ b/uniform-inventory/history.html
@@ -43,7 +43,7 @@
             <h2>Assignment History</h2>
             <div class="d-flex gap-2">
                 <button class="btn btn-stock-action" id="exportCsvBtn">
-                    <i class="bi bi-download"></i> Export to CSV
+                    <i class="bi bi-download"></i> <span class="btn-text">Export to CSV</span>
                 </button>
             </div>
         </div>
