--- a/uniform-inventory/index.html
+++ b/uniform-inventory/index.html
@@ -43,10 +43,10 @@
             <h2>Stock Management</h2>
             <div class="d-flex gap-2">
                 <button type="button" class="btn btn-stock-action" id="addNewUniformBtn">
-                    <i class="bi bi-plus-lg"></i> Add New Uniform
+                    <i class="bi bi-plus-lg"></i> <span class="btn-text">Add New Uniform</span>
                 </button>
                 <button class="btn btn-stock-action" id="exportCsvBtn">
-                    <i class="bi bi-download"></i> Export to CSV
+                    <i class="bi bi-download"></i> <span class="btn-text">Export to CSV</span>
                 </button>
             </div>
         </div>
