--- a/uniform-inventory/staff.html
+++ b/uniform-inventory/staff.html
@@ -45,10 +45,10 @@
                     <h2>Staff Management</h2>
                     <div class="d-flex gap-2">
                         <button class="btn btn-stock-action" data-bs-toggle="modal" data-bs-target="#addStaffModal">
-                            <i class="bi bi-person-plus"></i> Add Staff
+                            <i class="bi bi-person-plus"></i> <span class="btn-text">Add Staff</span>
                         </button>
                         <button class="btn btn-stock-action" id="exportCsvBtn">
-                            <i class="bi bi-download"></i> Export to CSV
+                            <i class="bi bi-download"></i> <span class="btn-text">Export to CSV</span>
                         </button>
                     </div>
                 </div>
