Add search and sort features to staff and history pages; update department field to dropdown

--- a/uniform-inventory/history.html
+++ b/uniform-inventory/history.html
@@ -50,6 +50,9 @@
 
         <div class="card">
             <div class="card-body">
+                <div class="mb-3">
+                    <input type="text" id="historySearch" class="form-control" placeholder="Search by staff name...">
+                </div>
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <colgroup>
