Change 'Action' column to 'Status' in history table

--- a/uniform-inventory/history.html
+++ b/uniform-inventory/history.html
@@ -75,7 +75,7 @@
                                 <th>Uniform Type</th>
                                 <th>Size</th>
                                 <th>Color</th>
-                                <th>Action</th>
+                                <th>Status</th>
                                 <th>Notes</th>
                             </tr>
                         </thead>
