Add search field to filter stock sections by uniform type title

--- a/uniform-inventory/index.html
+++ b/uniform-inventory/index.html
@@ -50,7 +50,9 @@
                 </button>
             </div>
         </div>
-
+        <div class="mb-3">
+            <input type="text" id="stockTypeSearch" class="form-control" placeholder="Search by uniform type...">
+        </div>
         <div id="stockList">
             <!-- Stock list will be dynamically populated here -->
         </div>
