Add single toggle button for expand/collapse all staff assignment rows

--- a/uniform-inventory/staff.html
+++ b/uniform-inventory/staff.html
@@ -50,6 +50,9 @@
                         <button class="btn btn-stock-action" id="exportCsvBtn">
                             <i class="bi bi-download"></i> <span class="btn-text">Export to CSV</span>
                         </button>
+                        <button class="btn btn-stock-action" id="toggleAllStaffBtn">
+                            <i class="bi bi-arrows-angle-expand" id="toggleAllStaffIcon"></i> <span class="btn-text" id="toggleAllStaffText">Expand All</span>
+                        </button>
                     </div>
                 </div>
 
